-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.12.0
-
None
-
3
-
9223372036854775807
The dt_index_operations::dio_lookup() function is not implemented for striped directory, which will cause subdirectory mount from a striped directory fail.
# cd /system/ ### Setup test directories # lfs mkdir -c 1 -i 0 dir-mdt0-nostripe # lfs mkdir -c 1 -i 1 dir-mdt1-nostripe # lfs mkdir -c 2 dir-stripe # mkdir dir-mdt0-nostripe/mountme # mkdir dir-mdt1-nostripe/mountme # mkdir dir-stripe/mountme ### Attempt mounts # cd /tmp/lustremnt # mkdir mount-dir ### Successful mounts from the non-striped directories on either MDT # mount -t lustre 10.6.254.71@o2ib2:10.6.254.72@o2ib2:10.6.254.76@o2ib2:10.6.254.77@o2ib2:/testsys/dir-mdt0-nostripe/mountme mount-dir # umount # mount -t lustre 10.6.254.71@o2ib2:10.6.254.72@o2ib2:10.6.254.76@o2ib2:10.6.254.77@o2ib2:/testsys/dir-mdt1-nostripe/mountme mount-dir # umount ### Fails to mount from striped directory # mount -t lustre 10.6.254.71@o2ib2:10.6.254.72@o2ib2:10.6.254.76@o2ib2:10.6.254.77@o2ib2:/testsys/dir-stripe/mountme mount-dir mount.lustre: mount 10.6.254.71@o2ib2:10.6.254.72@o2ib2:10.6.254.76@o2ib2:10.6.254.77@o2ib2:/testsys/dir-stripe/mountme at /mnt/mount-dir failed: No such file or directory Is the MGS specification correct? Is the filesystem name correct? If upgrading, is the copied client log valid? (see upgrade docs)